docs: 학습 문서 잔여 사항 정리 — 미룬 실측 두 건을 닫는다
인덱스의 미완 항목을 훑어보니 세 종류가 섞여 있었다. 실측이 남은 것, 설명이 낡은 것,
그리고 옛 정책의 잔재. 셋을 구분해 처리한다.

- 01~05·_TEMPLATE: `✍️ 직접 작성하는 섹션` 안내 10개와 본문 없는 `- [ ]` 6개를 걷어낸다.
  2026-07-24 정책 변경(§2.5)으로 AI 가 §4·§6 을 쓰게 됐는데 안내만 남아 있었다.
  _TEMPLATE 이 옛 정책("AI 는 명령만 제시")을 계속 재생산하고 있어 그것부터 고쳤다.

- 04·05: refresh 관련 의문 두 쌍이 글자만 다른 채 양쪽에 중복돼 있었다. 갱신 계기를
  만드는 것이 TokenRelay 이므로 05 로 모은다. 같은 의문이 흩어져 있으면 어느 쪽도 닫히지
  않는다. 정리 중 `aud` 질문은 이미 34 §4.6 이 답한 상태였음이 드러나 05 에서 닫았다.

- 37 신규(VT pinning): `ReentrantLock` 으로 예방했다는 서술이 실측 없이 오래 남아 있었다.
  HikariCP 를 커넥션 2개로 조여 400 동시성을 걸어도 pinning 0건이다. 다만 0건은 그 자체로
  근거가 못 된다 — 같은 JVM·플래그에서 `synchronized` 가 `reason:MONITOR` 를 찍는 반례를
  먼저 확인해 관측기가 살아 있음을 증명한 뒤에야 0건이 의미를 갖는다.

- 38 신규(Reactor↔Coroutine 경계): 코드에 세 방향이 다 있는데 판단 기준이 정리된 적이
  없었다. 가장 비싼 실수는 구독하지 않은 `mono { }` 로, 본문이 실행되지 않고 예외까지
  사라져 증상이 0이다.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>